--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
 click==8.0.1
-dataclasses==0.8
+dataclasses
 elastic-apm==5.8.1
 elastic-app-search==7.7.0
 enum-compat==0.0.3
